tests/src/frontend/syntax/invalid/for_c_2.sk
fun main(): void {
  for (i = 0; i < 10; ++i) {
    void
  };
}
